[package]
name = "pyifrextractor"
version = "0.0.1"
edition = "2021"
description = "IFRExtractor-RS: parse and extract HII IFR data, with Python bindings via PyO3"
authors = ["D-BRTN"]
license = "BSD2"

[lib]
name = "pyifrextractor"
crate-type = ["cdylib"]  # build a C-compatible shared library

[dependencies]
nom = "4.2.3"
pyo3 = { version = "0.18", features = ["extension-module"] }



[build-dependencies]
# only if you need a build.rs; usually not required for PyO3

[features]
default = []
